fix: position of chat preview on small screens (#6709)
* fix: position of chat preview on small screens

* test: upd snapshots

--- a/src/pages/integrations/integration/components/gorgias_chat/GorgiasChatIntegrationPreviewContainer/GorgiasChatIntegrationPreviewContainer.less
+++ b/src/pages/integrations/integration/components/gorgias_chat/GorgiasChatIntegrationPreviewContainer/GorgiasChatIntegrationPreviewContainer.less
@@ -10,9 +10,12 @@
     }
 
     .preview {
-        margin-left: 30px;
-
         position: sticky;
         top: @layout-spacing-s;
+    }
+
+    .row {
+        row-gap: @layout-spacing-l;
+        column-gap: @layout-spacing-s;
     }
 }
